LITT Changelog:
===============
 * 2019-09-16: Renamed window function columns to be less collision-prone with normal columns.
 * 2019-09-16: Simplified selectRowValues.
 * 2019-09-15: Change input prompt for existing story.
 * 2019-09-15: Made addColumn(Info) methods more readable (shorter). defWidth => width. Clean stdafx.h. const & => const&. Simplified getColumns.
 * 2019-09-14: Alias toSecondsValue and toIdValue to toULongLong instead of calling it.
 * 2019-09-14: Factored out QueryBuilder base class from OutputQuery and used it for write queries.
 * 2019-09-14: Added confirmf, executeWriteSqlf and made executeInsert "f" to avoid overuse of fmt.
 * 2019-09-14: Uses S() macro to get c_str() value of std::string in format functions, easier to read.
 * 2019-09-13: Re-grouped the col descs in the online help a little.
 * 2019-09-13: Simplified "actual name" column handling.
 * 2019-09-13: Simplified sel* helper methods.
 * 2019-09-13: Listings during add actions are now resistant to output action options like -c and -o.
 * 2019-09-13: Moved inputIsbn to Input functions and ISBN check functions to Utils.
 * 2019-09-13: Avoid duplicating the input regex check.
 * 2019-09-12: Cleaned up input functions.
 * 2019-09-12: Cleaned up toSecondsValue.
 * 2019-09-12: Bug fix: The ISBN check now verifies that it only contains numeric digits.
 * 2019-09-12: Bug fix: Getting the next ID value now works for an empty db!
 * 2019-09-12: Cleaned up string encoding conversion functions.
 * 2019-09-12: Took C++17 mode and SDK 10.0.17763.0 in use. Also Selection statements with initializer; P0305R1.
 * 2019-09-12: Bug fix: Detects invalid --colsep values while still allowing empty ones.
 * 2019-09-10: inputIsbn now uses ask instead of confirm so a default answer (n) can be given.
 * 2019-09-10: Bug fix: Must set errno to 0 before calling strtol/strtoull.
 * 2019-09-10: Tinkering; appendTo => +=, addColums => addResultColumns.